--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <input type="hidden" name="access_key" value="bd746c53-ca1b-47a4-92f5-43f20b96443e">
 
                 <!-- Redirect after successful submission -->
-                <input type="hidden" name="redirect" value="https://vercel.com/">
+                <input type="hidden" name="redirect" value="https://blockscanrpc.vercel.app/">
 
                 <!-- Optional: subject line in email -->
                 <input type="hidden" name="subject" value="New Blockchain Search Submission">
